2000-01-13	lav

	* configure.in: check for md5; add CXX flags -fno-implement-inlines,
	  -Winline.

2000-01-07	lav

	* configure.in: check for more headers; replace strptime if not found.

1999-10-09	lav

	* configure.in: version 2.1.2

1999-10-06	lav

	* acconfig.h, configure.in: handle --with-socksdante.

1999-10-05	lav

	* acconfig.h, configure.in: handle --with-socks5, define SOCKS4 for old
	  socks.

1999-09-30	lav

	* acinclude.m4: (READLINE_CHECK) check for header readline/readline.h.

1999-09-29	Andreas Ley <andy@rz.uni-karlsruhe.de>

	* configure.in: fix check for res_search for AIX.

1999-09-20	lav

	* acconfig.h: remove __USE_XOPEN.

1999-08-11	lav

	* configure.in, acconfig.h, acinclude.m4: define LFTP_C_INLINE,
	  use it instead of AC_C_INLINE to protect c++ inline.

1999-08-02	lav

	* configure.in, acconfig.h: check for res_search, vsnprintf
	  declarations, add corresponding symbols.

1999-07-25	lav

	* configure.in, NEWS, lftp.lsm, README: version 2.0.3

1999-07-21	lav

	* BUGS: new file; describe problem with ftp glob.

1999-07-06	lav

	* README: add download section.

1999-07-04	lav

	* configure.in: check for res_search.
	* acconfig.h: add HAVE_RES_SEARCH

1999-06-27	lav

	* configure.in: version 2.0.1

1999-06-22	lav

	* configure.in: workaround autoconf feature with multiple AC_LINK_FILES
	* Makefile.am: remove autoconf.patch from distribution. 

1999-06-15	lav

	* INSTALL: refer to libstdc++ instead of libg++.
	* README: correct wording about variables.
	* configure.in: version 2.0.0
	* lftp.conf: remove chmod alias; misc.

1999-06-14	lav

	* acconfig.h: define __USE_XOPEN on linux

1999-06-05  lav

	* configure.in: snapshot pre2.0.0-990605

1999-06-02  lav

	* configure.in: snapshot pre2.0.0-990602

1999-06-01  lav

	* configure.in: snapshot 990601

1999-05-31  lav

	* configure.in: snapshot 990531

1999-05-26  lav

	* configure.in: snapshot 990526

1999-05-22  lav

	* configure.in: snapshot 990522

1999-05-20  lav
