@@ -4,13 +4,13 @@ SUBDIRS = include readline-4.0 lib doc intl src po
 AUTOMAKE_OPTIONS = foreign
 
 install-data-local:
-	if [ ! -f $(sysconfdir)/lftp.conf ]; then \
-		$(mkinstalldirs) $(sysconfdir); \
-		$(INSTALL_DATA) lftp.conf $(sysconfdir)/lftp.conf; \
+	if [ ! -f $(DESTDIR)$(sysconfdir)/lftp.conf ]; then \
+		$(mkinstalldirs) $(DESTDIR)$(sysconfdir); \
+		$(INSTALL_DATA) lftp.conf $(DESTDIR)$(sysconfdir)/lftp.conf; \
 	fi
 
 uninstall-local:
 	# remove conf file if not changed.
-	if cmp -s $(sysconfdir)/lftp.conf lftp.conf; then \
-		rm -f $(sysconfdir)/lftp.conf; \
+	if cmp -s $(DESTDIR)$(sysconfdir)/lftp.conf lftp.conf; then \
+		rm -f $(DESTDIR)$(sysconfdir)/lftp.conf; \
 	fi
