@@ -1,3 +1,7 @@
+2000-01-17	lav
+
+	* Makefile.am: use DESTDIR.
+
 2000-01-13	lav
 
 	* configure.in: check for md5; add CXX flags -fno-implement-inlines,
